<resources>
    <string name="accept_terms">Accept terms</string>
    <string name="accept_reports_details">Automatically transmit error messages and app usage</string>
    <string name="accept_terms_details">I have read the disclaimer and privacy policy and accept these conditions.</string>
    <string name="app_name">Ready for Robots</string>
    <string name="notification_channel_name_info">Info</string>
    <string name="notification_channel_name_warning">Warnings</string>
    <string name="notification_channel_description_info">Informative notifications, e.g. when the upload finished successful.</string>
    <string name="notification_channel_description_warning">Warning messages, e.g. when the storage is full and the measuring had to be canceled. This notification should not be disabled.</string>
    <string name="toast_last_tracking_crashed">Your last tracking stopped unexpectedly.</string>
    <string name="logo_content_description" translatable="false">Ready for Robots Logo</string>
    <string name="login_name">Login</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="no_login_register">No credentials? <font color="#3f8730">Register now</font></string>
    <string name="title_activity_login">Sign in</string>
    <string name="error_message_field_required">This field is required</string>
    <string name="error_message_invalid_email">This email address is invalid</string>
    <string name="error_message_password_too_short">This password is too short</string>
    <string name="error_message_login_too_short">This username is too short</string>
    <string name="title_trips">Trips</string>
    <string name="title_capturing">Capturing</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_start">Start</string>
    <string name="title_pause">Pause</string>
    <string name="title_resume">Resume</string>
    <string name="title_stop">Stop</string>
    <string name="action_sync">Sync</string>
    <string name="title_map">Map</string>
    <string name="speed">Speed</string>
    <string name="title_dialog_starting_data_capture">Starting Data Capture</string>
    <string name="error_message_capturing_canceled_no_space">You need to free some space to start capturing.</string>
    <string name="notification_title_capturing_stopped">Stopped Capturing</string>
    <string name="msg_calibrating">Calibrating</string>
    <string name="modality_car">Car</string>
    <string name="modality_bicycle">Bicycle</string>
    <string name="modality_walking">Walking</string>
    <string name="modality_bus">Bus</string>
    <string name="modality_train">Train</string>
    <string name="modality_motorbike">Motorbike</string>
    <string name="capturing_inactive">capturing inactive</string>
    <string name="title_completed_trips">Completed trips</string>
    <string name="trip_title">Trip %d</string>
    <string name="trip_details" translatable="false">%1$d) %2$s (%3$.3f km)%4$s</string>
    <string name="modality_type">Modality type</string>
    <string name="mark_all_menu_item">Select all items</string>
    <string name="delete_marked_menu_item">Delete marked</string>
    <string name="measurement">Measurement</string>
    <string name="toast_export">Exported:</string>
    <string name="title_menu_item_export">Export all</string>
    <string name="export_data">Exporting data …</string>
    <string name="export_data_no_permission">Access to external memory (SD) required.</string>
    <string name="delete_data">Deleting marked measurements …</string>
    <string name="delete_data_non_selected">No measurements selected. Multiple selection by long press.</string>
    <string name="toast_selection_mode_enabled">Selection mode enabled</string>
    <string name="toast_selection_mode_disabled">Selection mode disabled</string>
    <string name="toast_no_locations_found">No locations found</string>
    <string name="toast_measurement_deletion_success">Copies of the measurements on the server are not affected.</string>
    <string name="toast_item_deletion_success">The selected items were deleted.</string>
    <string name="toast_select_location">Please select a location</string>
    <string name="toast_item_created_on_tracks_nearest_position">The item was created and moved onto the track</string>
    <string name="title_trip_details">Trip details</string>
    <string name="chart_label">elevation [m]</string>
    <string name="maximum">Maximum</string>
    <string name="length">Length</string>
    <string name="distance">Distance</string>
    <string name="duration">Duration</string>
    <string name="elevation_profile">Elevation profile</string>
    <string name="elevation_profile_no_data">Elevation profile (no altitude data available)</string>
    <string name="ascend">Ascend</string>
    <string name="avoided_co2">Avoided CO² emission</string>
    <string name="compared_to_car">Compared to a car</string>
    <string name="max_length">Maximum Length</string>
    <string name="elevation">Elevation</string>
    <string name="total">Total</string>
    <string name="publisher">Publisher</string>
    <string name="publisher_content">Cyface GmbH
        \nFröbelstr. 49
        \n01159 Dresden
        \nGermany\n

        \nRepresented by:
        \nDr. Klemens Muthmann
        \nArmin Schnabel
        \nDirk Ackner\n

        \nEmail: mail@cyface.de
        \nTelephone: +49 351 658 6363 9\n

        \nDistrict Court Dresden
        \nHRB: 36726
        \nUSt.-Id. (VAT no.): DE-312598748</string>
    <string name="reports">Error tracking by Sentry</string>
    <string name="reports_content">We are constantly improving and developing our app. Nevertheless, we cannot guarantee error-free operation of the app. In order to keep possible programming errors to a minimum, we use Sentry, a service provided by Functional Software Inc, 132 Hawthorne St, San Francisco, CA 94107, USA (hereinafter "Sentry"). Sentry monitors errors that occur within our App and informs us of them. In the event of a software error, the following information is automatically transmitted to Sentry:

        \n\n- Error messages that occur while using the App
        \n- Information about the use of the app immediately before the error occurred
        \n- Date and time of the errors, start time of the app
        \n- Device information: operating system, app version and device model
        \n- Identifier to identify errors from the same device
        \n- Status of the device: battery charge and temperature, charging state, boot time, memory space, connection type (Wi-Fi/mobile data), storage space, available storage, preferred language, device orientation, screen resolution and density, time zone
        \n- IP address of the machine (when the connection is established)

        \n\nThe information is collected anonymously, not used for personal purposes or for advertising purposes and then deleted again. The legal basis for the above-mentioned data processing is Art. 6, Paragraph 1 lit. f of the GDPR.

        \n\nThe sole purpose of processing is to improve the stability and usability of the app. For further information regarding data processing by Sentry, please refer to the Sentry Privacy Policy: https://sentry.io/privacy/</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="disclaimer_content">The application (hereinafter also: \"app\") is in <b>beta state</b>. It was developed to the best of our knowledge with utmost care by trained software developers. We are testing the app regularly and extensively on our own mobile devices.
        \nHowever, we currently can\'t ensure that everything works as expected and we assume no liability whatsoever for damage that may result from the use of the app. At the same time, we can\'t promise you all time availability of our servers and services such as data upload, data processing and data visualization.
        \n<b>By using this application you accept these conditions and the privacy conditions below.</b></string>
    <string name="privacy">Privacy Policy</string>
</resources>