<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_capturing">

    <fragment
        android:id="@+id/navigation_capturing"
        android:name="de.cyface.app.r4r.ui.capturing.CapturingFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_capturing" />

    <fragment
      android:id="@+id/navigation_trips"
      android:name="de.cyface.app.r4r.ui.trips.TripsFragment"
      android:label="@string/title_trips"
      tools:layout="@layout/fragment_trips" />

    <fragment
      android:id="@+id/navigation_statistics"
      android:name="de.cyface.app.r4r.ui.statistics.StatisticsFragment"
      android:label="@string/title_statistics"
      tools:layout="@layout/fragment_statistics" />

</navigation>