<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="@dimen/activity_horizontal_margin"
      tools:context=".ui.capturing.CapturingFragment">

        <TextView
          android:id="@+id/trip_title"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textAppearance="@style/TextAppearance.AppCompat.Large"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintLeft_toLeftOf="parent"
          android:minHeight="?attr/minTouchTargetSize" />

        <TextView
          android:id="@+id/speed_title"
          app:layout_constraintTop_toBottomOf="@+id/trip_title"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:paddingBottom="@dimen/activity_vertical_margin"
          android:text="@string/speed"/>

        <androidx.constraintlayout.widget.ConstraintLayout
          android:id="@+id/max_speed"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:layout_constraintTop_toBottomOf="@+id/speed_title"
          android:layout_marginStart="@dimen/activity_horizontal_margin"
          android:paddingBottom="@dimen/activity_vertical_margin">
            <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              app:layout_constraintTop_toTopOf="@id/max_speed"
              app:layout_constraintLeft_toLeftOf="parent"
              android:text="@string/maximum"
              android:textAppearance="?attr/textAppearanceSubtitle1"/>
            <TextView
              android:id="@+id/speedView"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              app:layout_constraintTop_toTopOf="@id/max_speed"
              app:layout_constraintRight_toRightOf="parent"
              android:layout_marginEnd="@dimen/activity_horizontal_margin"
              android:textAppearance="?attr/textAppearanceSubtitle1" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
          android:id="@+id/length_title"
          app:layout_constraintTop_toBottomOf="@+id/max_speed"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/activity_vertical_margin"
          android:paddingBottom="@dimen/activity_vertical_margin"
          android:text="@string/length"/>

        <androidx.constraintlayout.widget.ConstraintLayout
          android:id="@+id/distance"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:layout_constraintTop_toBottomOf="@+id/length_title"
          android:layout_marginStart="@dimen/activity_horizontal_margin"
          android:paddingBottom="@dimen/activity_vertical_margin">
            <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              app:layout_constraintTop_toTopOf="@id/distance"
              app:layout_constraintLeft_toLeftOf="parent"
              android:text="@string/distance"
              android:textAppearance="?attr/textAppearanceSubtitle1"/>
            <TextView
              android:id="@+id/distanceView"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              app:layout_constraintTop_toTopOf="@id/distance"
              app:layout_constraintRight_toRightOf="parent"
              android:layout_marginEnd="@dimen/activity_horizontal_margin"
              android:textAppearance="?attr/textAppearanceSubtitle1" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
          android:id="@+id/duration"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:layout_constraintTop_toBottomOf="@+id/distance"
          android:layout_marginStart="@dimen/activity_horizontal_margin"
          android:paddingBottom="@dimen/activity_vertical_margin">
            <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              app:layout_constraintTop_toTopOf="@id/duration"
              app:layout_constraintLeft_toLeftOf="parent"
              android:text="@string/duration"
              android:textAppearance="?attr/textAppearanceSubtitle1"/>
            <TextView
              android:id="@+id/durationView"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              app:layout_constraintTop_toTopOf="@id/duration"
              app:layout_constraintRight_toRightOf="parent"
              android:layout_marginEnd="@dimen/activity_horizontal_margin"
              android:textAppearance="?attr/textAppearanceSubtitle1" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
          android:id="@+id/elevation_profile_title"
          app:layout_constraintTop_toBottomOf="@+id/duration"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/activity_vertical_margin"
          android:text="@string/elevation_profile"/>

        <com.github.mikephil.charting.charts.LineChart
          android:id="@+id/chart"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:layout_constraintTop_toBottomOf="@+id/elevation_profile_title"
          android:minHeight="200sp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
          android:id="@+id/ascent"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:layout_constraintTop_toBottomOf="@+id/chart"
          android:paddingTop="@dimen/activity_vertical_margin"
          android:layout_marginStart="@dimen/activity_horizontal_margin"
          android:paddingBottom="@dimen/activity_vertical_margin">
            <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              app:layout_constraintTop_toTopOf="@id/ascent"
              app:layout_constraintLeft_toLeftOf="parent"
              android:text="@string/ascend"
              android:textAppearance="?attr/textAppearanceSubtitle1"/>
            <TextView
              android:id="@+id/ascendView"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              app:layout_constraintTop_toTopOf="@id/ascent"
              app:layout_constraintRight_toRightOf="parent"
              android:layout_marginEnd="@dimen/activity_horizontal_margin"
              android:textAppearance="?attr/textAppearanceSubtitle1" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
          android:id="@+id/co2_title"
          app:layout_constraintTop_toBottomOf="@+id/ascent"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/activity_vertical_margin"
          android:paddingBottom="@dimen/activity_vertical_margin"
          android:text="@string/avoided_co2"/>

        <androidx.constraintlayout.widget.ConstraintLayout
          android:id="@+id/co2"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:layout_constraintTop_toBottomOf="@+id/co2_title"
          android:layout_marginStart="@dimen/activity_horizontal_margin"
          android:paddingBottom="@dimen/activity_vertical_margin">
            <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              app:layout_constraintTop_toTopOf="@id/co2"
              app:layout_constraintLeft_toLeftOf="parent"
              android:text="@string/compared_to_car"
              android:textAppearance="?attr/textAppearanceSubtitle1"/>
            <TextView
              android:id="@+id/co2View"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              app:layout_constraintTop_toTopOf="@id/co2"
              app:layout_constraintRight_toRightOf="parent"
              android:layout_marginEnd="@dimen/activity_horizontal_margin"
              android:textAppearance="?attr/textAppearanceSubtitle1" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>